--- a/BlazorServerApp/BlazorServer/Pages/FetchData.razor
+++ b/BlazorServerApp/BlazorServer/Pages/FetchData.razor
@@ -15,7 +15,7 @@
 }
 else
 {
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Date</th>
