--- a/BlazorServerApp/BlazorServer/Shared/NavMenu.razor
+++ b/BlazorServerApp/BlazorServer/Shared/NavMenu.razor
@@ -13,15 +13,8 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="employees" Match="NavLinkMatch.All">
+                <span class="oi oi-people" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
     </nav>
@@ -30,7 +23,7 @@
 @code {
     private bool collapseNavMenu = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
